syntax = "proto3";

package paymentspb;

import "paymentspb/messages.proto";

service PaymentsService {
    rpc AuthorizePayment(AuthorizePaymentRequest) returns (AuthorizePaymentResponse) {}
    rpc ConfirmPayment(ConfirmPaymentRequest) returns (ConfirmPaymentResponse) {}
    rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse) {}
    rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse) {}
    rpc AdjustInvoice(AdjustInvoiceRequest) returns (AdjustInvoiceResponse) {}
    rpc PayInvoice(PayInvoiceRequest) returns (PayInvoiceResponse) {}
    rpc CancelInvoice(CancelInvoiceRequest) returns (CancelInvoiceResponse) {}
    rpc GetInvoice(GetInvoiceRequest) returns (GetInvoiceResponse) {}
}

message AuthorizePaymentRequest {
    string customer_id = 1;
    double amount = 2;
}

message AuthorizePaymentResponse {
    string id = 1;
}

message ConfirmPaymentRequest {
    string id = 2;
}

message ConfirmPaymentResponse {}

message GetPaymentRequest {
    string id = 1;
}

message GetPaymentResponse {
    Payment payment = 1;
}

message CreateInvoiceRequest {
    string order_id = 1;
    string payment_id = 2;
    double amount = 3;
}

message CreateInvoiceResponse {
    string id = 1;
}

message AdjustInvoiceRequest {
    string id = 1;
    double amount = 2;
}

message AdjustInvoiceResponse {}

message PayInvoiceRequest {
    string id = 1;
}

message PayInvoiceResponse {}

message CancelInvoiceRequest {
    string id = 1;
}

message CancelInvoiceResponse {}

message GetInvoiceRequest {
    string id = 1;
}

message GetInvoiceResponse {
    Invoice invoice = 1;
}
